--- a/app/src/main/res/values-ar-rEG/strings.xml
+++ b/app/src/main/res/values-ar-rEG/strings.xml
@@ -72,7 +72,6 @@
     <string name="Eye_city">مدينه العيون التخصصيه</string>
     <string name="english">الانجليزية</string>
     <string name="arabic">العربية</string>
-    <string name="skin1_info">التقران السفعي عبارة عن رقعة خشنة متقشرة من الجلد تتكون من التعرض لأشعة الشمس لعدة سنوات. غالبًا ما يظهر على الوجه أو الشفتين أو الأذنين أو الساعدين أو فروة الرأس أو الرقبة أو مؤخرة اليدين.  يُعرف أيضًا باسم التقرن الشمسي ، وينمو ببطء وعادة ما يظهر لأول مرة بعد أن يزيد عمر الشخص عن 40 عامًا. يمكنك تقليل مخاطر هذه الحالة الجلدية عن طريق الحد من التعرض لأشعة الشمس وحماية الجلد من الأشعة فوق البنفسجية.  إذا تُرك التقران السفعي دون علاج ، فقد يتحول إلى نوع من سرطان الجلد يسمى سرطان الخلايا الحرشفية ، مع احتمال 5٪ إلى 10٪.</string>
     <string name="Successful_rays">"الاشعة سليمة ! "</string>
     <string name="Successful_photos">"الصور سليمة ! "</string>
 
@@ -319,4 +318,8 @@
     <string name="chest_diseases_consultant_chest_and_respiratory">"استشاري امراض الصدر. الصدر والجهاز التنفسي ... "</string>
     <string name="master_of_chest_diseases_and_allergy_ain_shams_university">"ماجستير امراض الصدر والحساسية (جامعه عين شمس) ... "</string>
     <string name="_6056_al_miraj_city_zahraa_el_maadi_next_to_aba_el_dahab_ceramic_cairo_cairo_governorate_egypt_6056">"6056 مدينة المعراج - زهراء المعادي بجوار سيراميك أبا الدهب ، القاهرة ، محافظة القاهرة ، مصر 6056 "</string>
+    <string name="skin1_info">"تعد الآفات الوعائية من التشوهات الشائعة نسبيًا في الجلد والأنسجة الكامنة ، والمعروفة أكثر باسم الوحمات. هناك ثلاث فئات رئيسية من آفات الأوعية الدموية: الأورام الوعائية ، والتشوهات الوعائية ، والأورام الحبيبية القيحية. في حين أن هذه الوحمات يمكن أن تبدو متشابهة في بعض الأحيان ، إلا أنها تختلف من حيث المنشأ والعلاج الضروري. "</string>
+    <string name="skin1_info">"تعد الآفات الوعائية من التشوهات الشائعة نسبيًا في الجلد والأنسجة الكامنة ، والمعروفة أكثر باسم الوحمات. هناك ثلاث فئات رئيسية من آفات الأوعية الدموية: الأورام الوعائية ، والتشوهات الوعائية ، والأورام الحبيبية القيحية. في حين أن هذه الوحمات يمكن أن تبدو متشابهة في بعض الأحيان ، إلا أنها تختلف من حيث المنشأ والعلاج الضروري. "</string>
+    <string name="disease_skin">"انت مصابا بآفات الأوعية الدموية "</string>
+    <string name="vascular_lesions">"آفات الأوعية الدموية "</string>
 </resources>
