--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -388,7 +388,7 @@
     <string name="present">Present</string>
     <string name="not_present">Not present</string>
     <string name="disease_skin">you are infected with vascular lesions</string>
-    <string name="vascular_lesions">vascular lesions</string>
+    <string name="vascular_lesions">Vascular lesions</string>
     <string name="skin1_info">Vascular lesions are relatively common abnormalities of the skin and underlying tissues, more commonly known as birthmarks. There are three major categories of vascular lesions: Hemangiomas, Vascular Malformations, and Pyogenic Granulomas. While these birthmarks can look similar at times, they each vary in terms of origin and necessary treatment.</string>
 
 
