--- a/app/src/main/res/values-ar-rEG/strings.xml
+++ b/app/src/main/res/values-ar-rEG/strings.xml
@@ -321,4 +321,5 @@
     <string name="skin1_info">"تعد الآفات الوعائية من التشوهات الشائعة نسبيًا في الجلد والأنسجة الكامنة ، والمعروفة أكثر باسم الوحمات. هناك ثلاث فئات رئيسية من آفات الأوعية الدموية: الأورام الوعائية ، والتشوهات الوعائية ، والأورام الحبيبية القيحية. في حين أن هذه الوحمات يمكن أن تبدو متشابهة في بعض الأحيان ، إلا أنها تختلف من حيث المنشأ والعلاج الضروري. "</string>
     <string name="disease_skin">"انت مصابا بآفات الأوعية الدموية "</string>
     <string name="vascular_lesions">"آفات الأوعية الدموية "</string>
+    <string name="search">بحث</string>
 </resources>
